# static-gen

./: README.md  config.yaml  generate.py  pyproject.toml  requirements-dev.txt  requirements.txt  staticgen.py  tox.ini
.github/workflows/: build.yaml  tests.yml
content/: about.py  about.yaml  contact.py  contact.yaml  index.py  index.yaml
content/projects/: index.py  index.yaml
content/projects/commercial/project1/: index.py  index.yaml
docs/: about.html  contact.html  index.html
docs/projects/: index.html
docs/projects/commercial/project1/: index.html
docs/styles/: base.css
src/staticgen/: cli.py  staticgen.py
src/staticgen/starter_project/: config.py
src/staticgen/starter_project/.github/workflows/: build.yaml
src/staticgen/starter_project/content/: contact.py  index.py
src/staticgen/starter_project/content/projects/commercial/project1/: index.py
src/staticgen/tests/: test_gen.py  test_init.py
src/staticgen/utils/: assets.py  shortcodes.py
templates/: index.html
templates/projects/: index.html
tests/: test_asset_copy.py  test_configuration.py  test_continuous_integration.py  test_cross_platform_compatibility.py  test_error_handling.py  test_integration.py  test_markdown_conversion.py  test_performance.py  test_template_rendering.py  test_yaml_parsing.py
